Validate id token in login
